feat(common)：新增“变种铸造台”，并调整创造模式物品栏。